Added node-sass and Raleway font

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,10 @@
         "comma-dangle": [
             "error",
             "never"
+        ],
+        "eol-last": [
+            "warn",
+            "always"
         ]
     }
 }
