--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,7 @@
         "eol-last": [
             "warn",
             "always"
-        ]
+        ],
+        "@typescript-eslint/no-non-null-assertion": "off"
     }
 }
