--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "eslint": "^8.11.0",
-    "eslint-plugin-react": "^7.29.4",
-    "tsconfig-paths": "^3.14.1"
+    "eslint-plugin-react": "^7.29.4"
   }
 }
