--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "@typescript-eslint/parser": "^5.16.0",
     "eslint": "^8.11.0",
     "eslint-plugin-react": "^7.29.4",
-    "node-sass": "^7.0.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "sass": "^1.49.9",
     "typescript": "^4.6.3"
   }
 }
