Changed action to ignore eslint errors on deploy

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -9,6 +9,7 @@ jobs:
 
       - name: Install and Build
         run: |
+          export DISABLE_ESLINT_PLUGIN=true
           npm i
           npm run build
 
