Added github pages environment for the deploy action

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -9,8 +9,8 @@ jobs:
 
       - name: Install and Build
         run: |
+          export REACT_APP_ENV=gh-pages
           export DISABLE_ESLINT_PLUGIN=true
-          export PUBLIC_URL=/scandiweb-store
           npm i
           npm run build
 
