--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -12,6 +12,7 @@ jobs:
           export DISABLE_ESLINT_PLUGIN=true
           npm i
           npm run build
+          cp build/index.html build/404.html
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.3.3
